--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2",
-    "nodemon": "^3.1.4"
-  }
+    "express": "^4.21.2",
+    "nodemon": "^3.1.9",
+    "pg": "^8.14.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Wizardsmile1412/backend-skill-checkpoint-express-server.git"
+  },
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Wizardsmile1412/backend-skill-checkpoint-express-server/issues"
+  },
+  "homepage": "https://github.com/Wizardsmile1412/backend-skill-checkpoint-express-server#readme"
 }
